# trendly

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
config/: config.yaml
dashboard/: mdsite.yaml
dashboard/components/: SearchFeed.jsx  TopicFeed.jsx
dashboard/content/: index.md  search.md
data/topics/: ai-hardware.md  robotics.md
docs/: developer.md
docs/commands/: check.md  digest.md  enrich.md  extract.md  judge.md  publish.md  run.md  search.md
searxng/: settings.yml
src/trendly/: __init__.py  api.py  cli.py  config.py  docs.py  main.py  registry.py  scheduler.py
src/trendly/commands/: __init__.py  check.py  digest.py  enrich.py  extract.py  judge.py  publish.py  run.py  search.py
src/trendly/core/: __init__.py  check.py  digest.py  enrich.py  extract.py  items.py  judge.py  publish.py  run.py  search.py
src/trendly/models/: __init__.py  article.py  base.py
src/trendly/services/: __init__.py  llm.py  store.py  topics.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_cli.py  test_config.py  test_docs.py  test_registry.py  test_scheduler.py
tests/unit/commands/: test_check.py  test_digest.py  test_enrich.py  test_extract.py  test_judge.py  test_publish.py  test_search.py
tests/unit/core/: test_digest.py  test_enrich.py  test_extract.py  test_items.py  test_judge.py  test_publish.py  test_search.py
tests/unit/services/: test_store.py  test_topics.py
