[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trendly"
version = "0.1.0"
description = "AI powered news and social aggregator"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "feedgen>=1.0",
    "httpx>=0.27",
    "openai>=1.30",
    "pydantic>=2.6",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "trafilatura>=1.8",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
fallback = ["crawl4ai>=0.5"]
dev = ["pytest>=8.0"]

[project.scripts]
trendly = "trendly.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
